@@ -1,0 +1,37 @@
+<search function="iep">
+  <COMMENT>
+
+    This search file was initially created by Dave's Quick Search Deskbar
+    Search Wizard version 0.5 (beta) on 08/29/02 at 11:19:37
+
+    Even though this XML search will probably load and is a healthy start
+    toward a completed search, please be aware that this search will probably
+    not work as is and will require some human inspection and modification.
+
+  </COMMENT>
+  <name>Internet Encyclopedia of Philosophy</name>
+  <category>Reference</category>
+  <contributor> Andrew N. Carpenter</contributor>
+  <link>http://www.utm.edu/research/iep/</link>
+  <email>andy@andrewcarpenter.net</email>
+  <description>
+  Internet Encyclopedia of Philosophy Search
+  </description>
+  <form name="iepf"
+        method="post"
+        action="http://www.utm.edu/cgi-bin/swish/swish.cgi">
+    <input type="hidden" name="query" value="" />
+    <input type="hidden" name="database" value="/research/iep/.cgi/swish.index" />
+  </form>
+  <script><![CDATA[
+    function iep(q)
+    {
+      if( nullArgs("iep", q) )
+        return;
+
+      document.iepf.query.value = q;
+
+      submitForm(iepf);
+    }
+  ]]></script>
+</search>
